fix(UI): #63- Side menus overflow-y

--- a/Desktop/wwwroot/css/site.css
+++ b/Desktop/wwwroot/css/site.css
@@ -273,3 +273,10 @@ app {
 {
     height: 100%;
 }
+
+
+.scroll-y
+{
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
